promotions separated from other notifications

--- a/booking/src/main/resources/static/index.html
+++ b/booking/src/main/resources/static/index.html
@@ -65,7 +65,13 @@
         </div>
 
         <div class="section">
-            <h2>Real-time Notifications</h2>
+            <h2>Promotions</h2>
+            <div id="promotions">
+                <p>Promotions will appear here...</p>
+            </div>
+        </div>
+        <div class="section">
+            <h2>Notifications</h2>
             <div id="notifications">
                 <p>SSE messages will appear here...</p>
             </div>
