working but not complete SSE

--- a/booking/src/main/resources/static/index.html
+++ b/booking/src/main/resources/static/index.html
@@ -13,9 +13,9 @@
 
         <div class="section">
             <h2>Client Setup</h2>
-            <label for="clientName">Your Name (for SSE Client ID):</label>
+            <label for="clientName">Your Name:</label>
             <input type="text" id="clientName" placeholder="Your Name">
-            <button id="connectSseButton">Connect & Listen for Notifications</button>
+            <button id="connectSseButton">Sign In</button>
         </div>
 
         <div class="section">
