--- a/payment/src/main/resources/static/payment.html
+++ b/payment/src/main/resources/static/payment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Payment</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="payment.css">
 </head>
 <body>
     <div class="container">
@@ -18,6 +18,6 @@
         </div>
         <div id="statusMessage"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="payment.js"></script>
 </body>
 </html>
