--- a/booking/src/main/resources/static/index.html
+++ b/booking/src/main/resources/static/index.html
@@ -22,6 +22,7 @@
             <h2>Search Itineraries</h2>
             <label for="destination">Destination:</label>
             <select id="destination">
+                <option value="" selected>Select a Destination</option>
                 <option value="Bahamas">Bahamas</option>
                 <option value="Italy">Italy</option>
                 <option value="Brazil">Brazil</option>
@@ -32,7 +33,9 @@
             <input type="month" id="departureDate" >
 
             <label for="embarkationPort">Embarkation Port:</label>
-            <input type="text" id="embarkationPort" placeholder="e.g., Miami, Rome">
+            <select id="embarkationPort" disabled>
+                <option>Select a Destination First</option>
+            </select>
 
             <button id="searchItinerariesButton">Search Itineraries</button>
             <div id="itinerariesResult"></div>
@@ -67,13 +70,13 @@
         <div class="section">
             <h2>Promotions</h2>
             <div id="promotions">
-                <p>Promotions will appear here...</p>
+                <p>Promotions will appear here</p>
             </div>
         </div>
         <div class="section">
             <h2>Notifications</h2>
             <div id="notifications">
-                <p>SSE messages will appear here...</p>
+                <p>Messages will appear here</p>
             </div>
         </div>
     </div>
